--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 h1{
 	color: whitesmoke;
 	background-color: black;
-  font-family: Comic Sans;
+  font-family: comis sans-sheriff;
 }
 p{
 	font-size: 25px;
@@ -13,7 +13,7 @@ a{
 
 }
 body{
-	background-color: #6e8cb5;
+	background-color: white;
 }
 @media (max-width 960px) {
 	.container {
@@ -26,7 +26,7 @@ body{
 .card-white 4 {
 background-color: white;
 padding: 20px 30px;
-color: whitesmoke;
+color: black;
 border-radius: 0px;
 text-align: center;
 margin: 20px 0;
@@ -62,7 +62,7 @@ margin: 20px 0;
   width: 820px;
   height: 300px;
   text-align: center;
-  margin: 20px 470px;
+  margin: 20px 300px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
    }
 .img {
