--- a/style.css
+++ b/style.css
@@ -22,13 +22,14 @@ body{
 				margin: 20px 0;
 	}
 }
+
 .card-white 4 {
-	background-color: white;
-	padding: 20px 30px;
-	color: whitesmoke;
-	border-radius: 0px;
-	text-align: center;
-	margin: 20px 0;
+background-color: white;
+padding: 20px 30px;
+color: whitesmoke;
+border-radius: 0px;
+text-align: center;
+margin: 20px 0;
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
@@ -47,7 +48,13 @@ body{
   margin:100px auto;
 
 }
-
+@media (max-width 960px) {
+	.container {
+		width: 700px;
+				background-color: white;
+				margin: 20px 0;
+	}
+}
 .card-ozgur {
   transition: 0.3s;
   background-color: white;
