--- a/style.css
+++ b/style.css
@@ -18,11 +18,22 @@ body{
 @media (max-width 960px) {
 	.container {
 		width: 700px;
-				background-color: white;
-				margin: 20px 0;
+		background-color: white;
+		margin: 20px 0;
 	}
 }
-
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
 .card-white 4 {
 background-color: white;
 padding: 20px 30px;
